--- a/Final_602_Project_Airbnb.ipynb
+++ b/Final_602_Project_Airbnb.ipynb
@@ -7356,7 +7356,9 @@
         "\n",
         "- EDA Referrence- https://www.kaggle.com/avi111297/complete-eda-pred-cancel-of-booking-94-21-acc\n",
         "\n",
-        "- Superhost Requirements - https://www.airbnb.co.in/help/article/829/how-to-become-a-superhost"
+        "- Superhost Requirements - https://www.airbnb.co.in/help/article/829/how-to-become-a-superhost\n",
+        "\n",
+        "- ROC Curve - https://www.kaggle.com/jinhyukjung96/hotel-booking-demand-99-9"
       ],
       "metadata": {
         "id": "6GAvrcR8kwkl"
